--- a/templates/base.html
+++ b/templates/base.html
@@ -16,15 +16,48 @@
     </head>
     <body>
         <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">myBooksReviews</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-link" href="#">Reviews </a>
+                        <a class="nav-link" href="#">MyReviews</a>
+                        <a class="nav-link" href="#">Profile</a>
+                        <a class="nav-link" href="#">Sign In</a>
+                        <a class="nav-link" href="#">Sign Out</a>
+                    </div>
+                </div>
+            </nav>
         </header>
         <section>
+
         </section>
         <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        {% for users in users %}
+                            {{ users.first_name }} <br>
+                            {{ users.last_name }} <br>
+                            {{ users.created }} <br>
+                            {{ users.about }} <br>
+                            {{ users.email }} <br>
+                            {{ users.username }} <br>
+                            {{ users.password }} <br>
+                            {{ users.country }} <br>
+                            {{ users.active }} <br>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
         </main>
         <!-- Adding jQuery to the Project -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        Adding Bootstrap to the Project
+        <!-- Adding Bootstrap to the Project -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="{{ url_for('static', filename='js/script.js') }}"></script>
