--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,35 @@
                 </div>
             </div>
         </main>
+        <footer>
+            <div class="row justify-content-between">
+                <div class="col-12 col-sm-12">
+                    <ul class="list-inline d-flex my-auto justify-content-center">
+                        
+                        <!-- Twitter Social Link -->
+                        <li class="mx-2">
+                            <a href="https://twitter.com/hzunigae" target="_blank">
+                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        
+                        <!-- Github Profile Link -->
+                        <li class="mx-2">
+                            <a class="" href="https://github.com/hfzespinoz4" target="_blank">
+                                <i class="fab fa-github-alt" aria-hidden="true"></i>  
+                            </a>
+                        </li>
+              
+                        <!-- Contact Link -->
+                        <li class="mx-3 hvr-bounce-in">
+                            <a class="" href="./contact.html">
+                                <i class="fas fa-envelope" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
         <!-- Adding jQuery to the Project -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
