--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
         <title>MyBooksReviews </title>
         {% block styles %}
+            .card-element{
+            margin: 0;
+            }
         {% endblock %}
     </head>
     <body>
