--- a/templates/myreviews.html
+++ b/templates/myreviews.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>My Reviews</h1>
+    <h1 class="text-center">My Reviews</h1>
     <div>
        
     </div>
