--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,10 @@
     background-color:blue;
 }
 
+.profile-element{
+    margin: 0;
+}
+
 .container{
     height:90%;
     
@@ -13,4 +17,8 @@
 
 .card-element{
     margin: 0;
+}
+
+body{
+    background-color: blue;
 }
