--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Login</h1>
+    <h1 class="display-4 text-center">Login</h1>
+    <div class="col-sm-8 mt-3 mx-auto">
+        <form class="col-sm-12 profile card" method="POST" action="{{ url_for('get_login') }}">
+            <div class="form-group">
+                <label for="login-username">Username: </label>
+                <input type="text" id="login-username" name="login-username" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="login-password">Password:</label>
+                <input type="password:" id="login-password" name="login-password" class="form-control" minlength="5"
+                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
+            </div>
+            <br>    
+            <input type="submit" value="Login" class="form-control col-6 mx-auto">
+            <br>
+            <div class="mt-3 mb-3"></div>
+        </form>
+        <br>
+        <div>
+            <p class="text-center"> New Here?
+                <a href="{{ url_for('get_register') }}" class="">Create an Account</a>
+            </p>
+        </div>
+    </div>
 {% endblock %}
