--- a/templates/myreviews.html
+++ b/templates/myreviews.html
@@ -2,38 +2,16 @@
 {% block content %}
     <h1 class="text-center">My Reviews</h1>
     <div>
-       <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#BookInfoModal">
-                Book Info
-                </button>
-                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#BookReviewModal">
-                Review
-                </button>
-
-                <!-- Modal For Book Info -->
-                <div class="modal fade" id="BookInfoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="myReviewsModalLabel1">{{ reviews.title }}</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <p>Review by: {{ reviews.user }} </p>
-                                <p>Created: {{ reviews.creation_date}}</p>
-                                <p>Last Modified: {{ reviews.last_mod }}</p>
-                                <br>
-                                <cite>{{ reviews.review }}</cite>
-
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+       {% for myreviews in myreviews %}
+        <div class="col-sm-12 col-md-3 card">
+            <img src="{{ myreviews.cover }}" alt="Book Cover" height="250rem" width="100%">
+            <div class="mx-auto">
+                <h4 class="text-center card-text">{{ myreviews.title }}</h4>
+                <h5 class="text-center card-text">{{ myreviews.author }}</h5>
+                <p class="mx-auto card-text">Review by: {{ myreviews.user }} </p>
+                <p class="mx-auto card-text">Created: {{ myreviews.creation_date }}</p>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-    
 {% endblock %}
