--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="profile-container">
-        <h2 class="text-4 text-center">Profile</h2>
+        <h2 class="text-4 text-center"> {{ usr}} Profile</h2>
         <div class="col-sm-12 col-md-8 mx-auto profile">
             <div class="pt-2">
                 <img class="d-flex col-sm-5 mx-auto" src="https://www.clipartkey.com/mpngs/b/301-3011907_helping-the-poor-and-needy-clipart.png" alt="Profile Image" height="160px" width="160px">
@@ -9,12 +9,8 @@
                     <h4 class="text-center profile-element">User Name</h4>
                     <h6 class="text-center profile-element">user</h6>
                     <p class="text-center profile-element">Email: </p>
-                    <p class="text-center profile-element">Country: </p>
-                    <p class="text-center profile-element">Member Since: </p> 
                 </div>
             </div>
-            
-                
       
             <div class="row">
                 <!-- Form containing user profile information -->
