--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
           
         {% endblock %}
     </head>
-    <body>
+    <body class="container">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="{{ url_for('get_reviews') }}">myBooksReviews</a>
