--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
             </div>
             <br>    
-            <input type="submit" value="Login" class="form-control col-6 mx-auto">
+            <input type="submit" value="Login" class="form-control btn btn-success col-6 mx-auto">
             <br>
             <div class="mt-3 mb-3"></div>
         </form>
