--- a/templates/register.html
+++ b/templates/register.html
@@ -5,26 +5,31 @@
         <form class="col-sm-12 profile card" method="POST" action="{{ url_for('get_register') }}">
             <div class="form-group">
                 <label for="register-email">Email:</label>
-                <input type="email" id="register-email" name="register-email" class="form-control" required>
+                <input type="email" id="register-email" name="register-email" placeholder="name@company.com" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="register-username">Username: </label>
-                <input type="text" id="register-username" name="register-username" class="form-control" required>
+                <input type="text" id="register-username" name="register-username" placeholder="username" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="register-password">password:</label>
-                <input type="password:" id="register-password" name="register-password" class="form-control" minlength="5"
+                <label for="register-password">Password:</label>
+                <input type="password" id="register-password" name="register-password" placeholder="your password" class="form-control" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
             </div>
             <div class="form-group">
                 <label for="register-passwordval">Repeat Your Password:</label>
-                <input type="password" id="register-passwordval" name="register-passwordval" class="form-control" minlength="5"
+                <input type="password" id="register-passwordval" name="register-passwordval" placeholder="your password" class="form-control" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
             </div>
             <br>    
-            <input type="submit" value="Register" class="form-control">
+            <input type="submit" value="Register" class="form-control btn btn-success col-sm-6 text-center d-flex mx-auto mb-2">
             <br>
         </form>
         <br>
+        <div>
+            <p class="text-center"> Already Registered?
+                <a href="{{ url_for('get_register') }}" class="">Login</a>
+            </p>
+        </div>
     </div>
 {% endblock %}
