--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
             </div>
             <div class="form-group">
                 <label for="login-password">Password:</label>
-                <input type="password:" id="login-password" name="login-password" class="form-control" minlength="5"
+                <input type="password" id="login-password" name="login-password" class="form-control" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
             </div>
             <br>    
