--- a/templates/myreviews.html
+++ b/templates/myreviews.html
@@ -5,9 +5,9 @@
     <button type="button" class="btn btn-success text-center d-flex my-2 mx-auto" data-toggle="modal" data-target="#exampleModal">
     Create Review
     </button>
-    <div>
+    <div class="d-flex">
        {% for myreview in myreviews %}
-        <div class="mt-2 profile card" id="{{ myreview.id }}">
+        <div class="mt-2 profile card col-sm-12 col-md-4 mx-1" id="{{ myreview._id }}">
             <div class="d-block">
                 <div class="col-sm-12 col-md-5 mt-3 mb-3 d-flex review" >
                     <img src="{{ myreview.cover }}" alt="Book Cover" class="col-sm-4 col-md-4 book-cover ">
@@ -19,10 +19,7 @@
                             <p class="result-text">Created: {{ myreview.creation_date }}</p>
                             <p class="result-text">Last Modified: {{ myreview.last_mod }}</p>
                             <div class="d-flex">
-                            {{ myreview._id }}
-
-
-                                <button class="btn btn-success text-center d-flex my-2 mx-auto">Modify</button>
+                                <button class="btn btn-success text-center d-flex my-2 mx-auto"><i class="fas fa-edit"></i></button>
                                 <button class="btn btn-success text-center d-flex my-2 mx-auto">Delete</button>
                             </div>
                         </div>
@@ -49,7 +46,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form method="POST" action="{{ url_for('create_review') }}">
                         <div class="form-group">
                             <label>Title:</label> 
                             <input type="text" class="form-control" id="new-title" name="new-title">
