Adding Edit Functionallity

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
             {% endwith %}
         </section>
         <main>
-            <div class="container">
+            <div>
                 <div class="row">
                     <div class="col-sm-12">
                         {% block content %}
@@ -56,28 +56,28 @@
                 </div>
             </div>
         </main>
-        <footer>
+        <footer class="mt-2">
             <div class="row justify-content-between">
                 <div class="col-12 col-sm-12">
                     <ul class="list-inline d-flex my-auto justify-content-center">
                         
                         <!-- Twitter Social Link -->
                         <li class="mx-2">
-                            <a href="https://twitter.com/hzunigae" target="_blank">
+                            <a href="https://twitter.com/hzunigae" target="_blank" class="review-button">
                                 <i class="fab fa-twitter" aria-hidden="true"></i>
                             </a>
                         </li>
                         
                         <!-- Github Profile Link -->
                         <li class="mx-2">
-                            <a class="" href="https://github.com/hfzespinoz4" target="_blank">
+                            <a href="https://github.com/hfzespinoz4" target="_blank" class="review-button">
                                 <i class="fab fa-github-alt" aria-hidden="true"></i>  
                             </a>
                         </li>
               
                         <!-- Contact Link -->
                         <li class="mx-3 hvr-bounce-in">
-                            <a class="" href="./contact.html">
+                            <a class="review-button" target="_blank" href="https://github.com/hfzespinoz4">
                                 <i class="fas fa-envelope" aria-hidden="true"></i>
                             </a>
                         </li>
