--- a/templates/myreviews.html
+++ b/templates/myreviews.html
@@ -20,12 +20,12 @@
                             <p class="result-text">Last Modified: {{ myreview.last_mod }}</p>
                             <div class="d-flex">
                                 {% if session.user|lower == myreview.user|lower %}
-                                    <a href="{{ url_for('edit_review', review_id=myreview._id)}} "class="btn btn-success review-button text-center d-flex my-2 mx-1">
+                                    <a href="{{ url_for('edit_review', review_id=myreview._id)}}" class="btn btn-success review-button text-center d-flex my-2 mx-1">
                                         <i class="fas fa-edit"></i>
                                     </a>
-                                    <button class="btn btn-danger review-button text-center d-flex my-2 mx-1">
+                                    <a href="{{ url_for('delete_review', review_id=myreview._id)}} " class="btn btn-danger review-button text-center d-flex my-2 mx-1">
                                         <i class="fas fa-trash-alt"></i>
-                                    </button>
+                                    </a>
                                 {% endif %}
                             </div>
                         </div>
